crates/templates/tests/snapshots/run_test__render-12.snap
---
source: crates/templates/tests/run_test.rs
description: Global dependencies are used only for the root command if the use-global-deps-for-root rule is set
expression: output
---
rargs_run() {
  declare -A deps=()
  declare -a rargs_input=()
  normalize_rargs_input "$@"
  parse_arguments "${rargs_input[@]}"
  printf "\e[31m%s\e[33m%s\e[31m%s\e[0m\n\n" "Nothing to do. Please add " "commands" " or a root command" >&2
  usage >&2
  exit 1
}
