crates/templates/tests/snapshots/run_test__render-17.snap
---
source: crates/templates/tests/run_test.rs
description: Script has an environment variable that should be set on an option
expression: output
---
rargs_run() {
  declare -A deps=()
  declare -a rargs_input=()
  normalize_rargs_input "$@"
  parse_arguments "${rargs_input[@]}"
  # Check global environment variables
  
  if [[ -z "$rargs_foo" ]]; then
    rargs_foo="${FOO:-}"
  fi

  printf "\e[31m%s\e[33m%s\e[31m%s\e[0m\n\n" "Nothing to do. Please add " "commands" " or a root command" >&2
  usage >&2
  exit 1
}
