crates/templates/tests/snapshots/run_test__render-9.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with multiple global dependencies and a message
expression: output
---
rargs_run() {
  declare -a rargs_input=()
  normalize_rargs_input "$@"
  parse_arguments "${rargs_input[@]}"
  # Check global dependencies
  
  for dependency in git curl wget; do
    if ! command -v $dependency >/dev/null 2>&1; then
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: " "$dependency" >&2
      printf "Please install git, curl and wget\n" >&2
      exit 1
    fi
  done

  printf "\e[31m%s\e[33m%s\e[31m%s\e[0m\n\n" "Nothing to do. Please add " "commands" " or a root command" >&2
  usage >&2
  exit 1
}
